Fix extraneous lines appearing on landing page request list on small screens.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -355,6 +355,7 @@ button:hover {
 		.request_list th {
 			display: block;
 			text-align: left;
+			border: none;
 		}
 			.landing th > a,
 			.landing td > a {
